--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^3.3.4",
     "cheerio": "^0.19.0",
     "express": "^4.12.3",
+    "express-session": "^1.11.1",
     "fs-extra": "^0.18.2",
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.8.0",
