--- a/package.json
+++ b/package.json
@@ -17,18 +17,17 @@
   },
   "homepage": "https://github.com/qianjiahao/Neusoft-News",
   "dependencies": {
-    "bootstrap": "^3.3.4",
     "cheerio": "^0.19.0",
+    "cookie-parser": "^1.3.4",
     "express": "^4.12.3",
     "express-session": "^1.11.1",
     "fs-extra": "^0.18.2",
     "gulp": "^3.8.11",
     "gulp-livereload": "^3.8.0",
-    "jquery": "^2.1.4",
     "q": "^1.3.0",
     "superagent": "^1.2.0"
   },
-   "engines": {
+  "engines": {
     "node": "0.12.x"
   }
 }
