--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.12.3",
     "cheerio": "^0.19.0",
     "cookie-parser": "^1.3.4",
+    "cool-ascii-faces": "^1.3.3",
     "ejs": "^2.3.1",
     "express": "^4.12.3",
     "express-session": "^1.11.1",
